tests/cases/compiler-development/artifact/errors/diagnostic-labeled-block-break-type.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected bool, got i64" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/control-flow/errors/labeled-block-break-type.ari" display="tests/cases/control-flow/errors/labeled-block-break-type.ari" bytes=92
  Label index=0 role=primary source_id=0 source="tests/cases/control-flow/errors/labeled-block-break-type.ari" line=4 column=5 end_line=4 end_column=6 byte_start=67 byte_end=68 message=""
  Snippet label=0 text="  --> tests/cases/control-flow/errors/labeled-block-break-type.ari:4:5\n   |\n 4 |     1\n   |     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/control-flow/errors/labeled-block-break-type.ari" line=3 column=16 end_line=3 end_column=21 byte_start=56 byte_end=61 message="labeled block break establishes result type bool"
  Snippet label=1 text="  --> tests/cases/control-flow/errors/labeled-block-break-type.ari:3:16\n   |\n 3 |     break done false;\n   |                ^^^^^"
  Note index=0 location=none message="labeled block expression results must produce one common type after expression coercions"
  Help index=0 location=none message="make this result produce bool or change the expected labeled block expression result type"
